--- a/DistributedProcessing/Core/Core.fsproj
+++ b/DistributedProcessing/Core/Core.fsproj
@@ -36,9 +36,11 @@
     <Compile Include="VersionInfo.fs" />
     <Compile Include="Errors.fs" />
     <Compile Include="ServiceInfo.fs" />
-    <Compile Include="Proxy.fs" />
     <Compile Include="AppSettings.fs" />
     <Compile Include="DataAccess.fs" />
+    <Compile Include="Proxy.fs" />
+    <Compile Include="WorkerNode.fs" />
+    <Compile Include="Partitioner.fs" />
   </ItemGroup>
 
   <ItemGroup>
