--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -61,13 +61,14 @@
     <PackageReference Include="CoreWCF.Primitives" Version="1.5.2" />
     <PackageReference Include="FSharp.Interop.Dynamic" Version="5.0.1.268" />
     <PackageReference Include="FsPickler" Version="5.3.2" />
+    <PackageReference Include="FsPickler.Json" Version="5.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Http" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
-    <PackageReference Include="FSharp.Core" Version="8.0.301" />
+    <PackageReference Include="FSharp.Core" Version="8.0.400" />
     <PackageReference Include="SQLProvider" Version="1.3.43" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
