--- a/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
+++ b/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Program.fs" />
   </ItemGroup>
 
