--- a/Sys/Sys.fsproj
+++ b/Sys/Sys.fsproj
@@ -68,7 +68,7 @@
     <PackageReference Include="System.ServiceModel.NetTcp" Version="8.0.0" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="8.0.0" />
     <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
-    <PackageReference Include="FSharp.Core" Version="8.0.400" />
+    <PackageReference Update="FSharp.Core" Version="8.0.400" />
     <PackageReference Include="SQLProvider" Version="1.3.43" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="SQLite.Interop.dll" Version="1.0.103" />
