--- a/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
+++ b/Samples/Msg/MsgClientOne/MsgClientOne.fsproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <Platforms>x64</Platforms>
-    <AssemblyName>Softellect.Samples.Msg.ClientOne</AssemblyName>
+    <AssemblyName>ClientOne</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
