--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -4,21 +4,15 @@
     "log4net.Config": "log4net.config",
     "log4net.Config.Watch": "True",
     "log4net.Internal.Debug": "False",
-    "MessagingHttpServicePort": "0",
-    "MessagingNetTcpServicePort": "0",
-    "MessagingServiceAddress": "127.0.0.1",
-    "MessagingServiceCommunicationType": "NetTcpCommunication",
+    "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45003,netTcpServiceName=MessagingNetTcpService,netTcpSecurityMode=NoSecurity",
     "NodePriority": "100",
     "NoOfCores": "0",
     "PartitionerId": "{00000000-0000-0000-0000-000000000000}",
     "WorkerNodeId": "{00000000-0000-0000-0000-000000000000}",
     "WorkerNodeName": "",
-    "WorkerNodeServiceAddress": "",
-    "WorkerNodeServiceCommunicationType": "NetTcpCommunication",
-    "WorkerNodeServiceHttpPort": "0",
-    "WorkerNodeServiceNetTcpPort": "0"
+    "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45003,netTcpServiceName=MessagingNetTcpService,netTcpSecurityMode=NoSecurity"
   },
   "connectionStrings": {
-    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns705_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;"
+    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;"
   }
 }
