--- a/Wcf/Wcf.fsproj
+++ b/Wcf/Wcf.fsproj
@@ -37,13 +37,12 @@
     <Compile Include="AppSettings.fs" />
     <Compile Include="Client.fs" />
     <Compile Include="Service.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-
-  <ItemGroup />
 
   <ItemGroup>
     <ProjectReference Include="..\Sys\Sys.fsproj" />
@@ -53,6 +52,8 @@
     <PackageReference Include="CoreWCF.Http" Version="1.5.2" />
     <PackageReference Include="CoreWCF.NetTcp" Version="1.5.2" />
     <PackageReference Include="CoreWCF.Primitives" Version="1.5.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
     <PackageReference Update="FSharp.Core" Version="8.0.400" />
   </ItemGroup>
 
