--- a/Samples/Msg/MsgWorker/appsettings.json
+++ b/Samples/Msg/MsgWorker/appsettings.json
@@ -8,7 +8,7 @@
   },
   "appSettings": {
     "ExpirationTimeInMinutes": "5",
-    "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45013;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
+    "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45013;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
   },
   "connectionStrings": {
     "MessagingService": "Data Source=localhost;Initial Catalog=msg803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
