--- a/Samples/Msg/MsgClientOne/appsettings.json
+++ b/Samples/Msg/MsgClientOne/appsettings.json
@@ -8,6 +8,6 @@
   },
   "appSettings": {
     "ExpirationTimeInMinutes": "5",
-    "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45013;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
+    "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45013;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
   }
 }
