--- a/DistributedProcessing/WorkerNodeService/appsettings.json
+++ b/DistributedProcessing/WorkerNodeService/appsettings.json
@@ -6,11 +6,11 @@
     "log4net.Internal.Debug": "False",
     "MessagingServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45003,netTcpServiceName=MessagingNetTcpService,netTcpSecurityMode=NoSecurity",
     "NodePriority": "100",
-    "NoOfCores": "0",
-    "PartitionerId": "{00000000-0000-0000-0000-000000000000}",
-    "WorkerNodeId": "{00000000-0000-0000-0000-000000000000}",
-    "WorkerNodeName": "",
-    "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45003,netTcpServiceName=MessagingNetTcpService,netTcpSecurityMode=NoSecurity"
+    "NoOfCores": "2",
+    "PartitionerId": "{F941F87C-BEBC-43E7-ABD3-967E377CBD57}",
+    "WorkerNodeId": "{8ACF252B-4AEE-40CB-BEB1-1FD162BC3907}",
+    "WorkerNodeName": "TEST",
+    "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1,netTcpServicePort=45013,netTcpServiceName=MessagingNetTcpService,netTcpSecurityMode=NoSecurity"
   },
   "connectionStrings": {
     "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;"
