--- a/DistributedProcessing/Core/Core.fsproj
+++ b/DistributedProcessing/Core/Core.fsproj
@@ -39,6 +39,7 @@
     <Compile Include="AppSettings.fs" />
     <Compile Include="DataAccess.fs" />
     <Compile Include="Proxy.fs" />
+    <Compile Include="ModelRunnerProxy.fs" />
     <Compile Include="WorkerNode.fs" />
     <Compile Include="Partitioner.fs" />
   </ItemGroup>
