--- a/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
+++ b/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
@@ -54,7 +54,12 @@
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Compile Include="AppSettings.fs" />
     <Compile Include="CommandLine.fs" />
+    <Compile Include="DataAccess.fs" />
+    <Compile Include="ModelRunnerProxy.fs" />
+    <Compile Include="Proxy.fs" />
+    <Compile Include="WorkerNode.fs" />
     <Compile Include="Worker.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
