--- a/Samples/DistrProc/MessagingService/MessagingService.fsproj
+++ b/Samples/DistrProc/MessagingService/MessagingService.fsproj
@@ -4,15 +4,10 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>MsgWorker</AssemblyName>
+        <AssemblyName>MessagingService</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Include="Properties\launchSettings.json">
-          <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-          <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-          <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-        </Content>
         <None Include="MessagingVersionInfo.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingVersionInfo.PS1')" />
         <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingServiceName.PS1')" />
         <Content Include="appsettings.Development.json">
@@ -36,7 +31,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\MessagingService\MessagingService.fsproj" />
-      <ProjectReference Include="..\DistrProcInfo\DistrProcInfo.fsproj" />
+      <ProjectReference Include="..\ServiceInfo\ServiceInfo.fsproj" />
     </ItemGroup>
 
 </Project>
