--- a/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
+++ b/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
@@ -4,17 +4,10 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>PartitionerService</AssemblyName>
+        <AssemblyName>SolverRunner</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Include="Properties\launchSettings.json">
-          <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-          <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-          <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-        </Content>
-        <None Include="MessagingVersionInfo.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingVersionInfo.PS1')" />
-        <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingServiceName.PS1')" />
         <Content Include="appsettings.Development.json">
           <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -29,13 +22,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
       <PackageReference Update="FSharp.Core" Version="8.0.400" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\MessagingService\MessagingService.fsproj" />
+      <ProjectReference Include="..\..\..\DistributedProcessing\Core\Core.fsproj" />
+      <ProjectReference Include="..\ServiceInfo\ServiceInfo.fsproj" />
     </ItemGroup>
 
 </Project>
