--- a/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
+++ b/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
@@ -14,6 +14,7 @@
     <RepositoryUrl>https://github.com/kkkmail/Softellect</RepositoryUrl>
     <PackageProjectUrl>https://github.com/kkkmail/Softellect/tree/master/WorkerNodeService</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <DefineConstants>WORKER_NODE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -57,7 +58,7 @@
     <Compile Include="Primitives.fs" />
     <Compile Include="AppSettings.fs" />
     <Compile Include="CommandLine.fs" />
-    <Compile Include="DataAccess.fs" />
+    <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
     <Compile Include="Proxy.fs" />
     <Compile Include="WorkerNode.fs" />
     <Compile Include="Worker.fs" />
