--- a/MessagingData/MessagingData.fsproj
+++ b/MessagingData/MessagingData.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>Softellect.Messaging.Data</AssemblyName>
     <Platforms>x64</Platforms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
