--- a/Samples/Wcf/WcfService/WcfService.fsproj
+++ b/Samples/Wcf/WcfService/WcfService.fsproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
     <AssemblyName>Softellect.Samples.Wcf.WcfService</AssemblyName>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
