--- a/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
+++ b/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
@@ -15,6 +15,7 @@
     <PackageProjectUrl>https://github.com/kkkmail/Softellect/tree/master/WorkerNodeService</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <DefineConstants>WORKER_NODE</DefineConstants>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
