--- a/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
+++ b/Samples/DistrProc/SolverRunner/SolverRunner.fsproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
         <AssemblyName>SolverRunner</AssemblyName>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <ItemGroup>
