--- a/Samples/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
+++ b/Samples/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
         <AssemblyName>WorkerNodeService</AssemblyName>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <ItemGroup>
