--- a/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
+++ b/DistributedProcessing/WorkerNodeService/WorkerNodeService.fsproj
@@ -60,7 +60,7 @@
     <Compile Include="AppSettings.fs" />
     <Compile Include="CommandLine.fs" />
     <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
-    <Compile Include="Proxy.fs" />
+    <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
     <Compile Include="WorkerNode.fs" />
     <Compile Include="Worker.fs" />
     <Compile Include="Program.fs" />
