--- a/DistributedProcessing/SolverRunner/SolverRunner.fsproj
+++ b/DistributedProcessing/SolverRunner/SolverRunner.fsproj
@@ -39,6 +39,7 @@
     <Compile Include="AppSettings.fs" />
     <Compile Include="CommandLine.fs" />
     <Compile Include="..\Core\DataAccess.fs" Link="DataAccess.fs" />
+    <Compile Include="NoSql.fs" />
     <Compile Include="..\Core\Proxy.fs" Link="Proxy.fs" />
     <Compile Include="Proxy1.fs" />
     <Compile Include="OdeSolver.fs" />
