--- a/DistributedProcessing/MessagingService/MessagingService.fsproj
+++ b/DistributedProcessing/MessagingService/MessagingService.fsproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>DistributedProcessingMessagingService</AssemblyName>
+        <AssemblyName>Softellect.DistributedProcessing.MessagingService</AssemblyName>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
