--- a/Samples/DistrProc/WorkerNodeService/appsettings.json
+++ b/Samples/DistrProc/WorkerNodeService/appsettings.json
@@ -13,6 +13,7 @@
     "WorkerNodeServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45013;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
   },
   "connectionStrings": {
-    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
+    "WorkerNodeService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;",
+    "MessagingService": "Data Source=localhost;Initial Catalog=wns803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
   }
 }
