--- a/DistributedProcessing/PartitionerService/appsettings.json
+++ b/DistributedProcessing/PartitionerService/appsettings.json
@@ -5,6 +5,7 @@
     "PartitionerServiceAccessInfo": "NetTcpServiceInfo|netTcpServiceAddress=127.0.0.1;netTcpServicePort=45023;netTcpServiceName=MessagingNetTcpService;netTcpSecurityMode=NoSecurity"
   },
   "connectionStrings": {
-    "PartitionerService": "Data Source=localhost;Initial Catalog=prt803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
+    "PartitionerService": "Data Source=localhost;Initial Catalog=prt803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;",
+    "MessagingService": "Data Source=localhost;Initial Catalog=prt803_01;Integrated Security=SSPI;Max Pool Size=20000;Connection Timeout=60;TrustServerCertificate=yes;"
   }
 }
