--- a/Samples/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
+++ b/Samples/DistrProc/WorkerNodeService/WorkerNodeService.fsproj
@@ -22,6 +22,27 @@
     <ItemGroup>
         <None Include="..\MessagingService\MessagingServiceName.ps1" Link="MessagingServiceName.ps1" CopyToOutputDirectory="Always" Condition="Exists('MessagingServiceName.PS1')" />
         <None Include="..\MessagingService\MessagingVersionInfo.ps1" Link="MessagingVersionInfo.ps1" CopyToOutputDirectory="Always" Condition="Exists('MessagingVersionInfo.PS1')" />
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\Install-WorkerNodeService.ps1" Link="Install-WorkerNodeService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\Start-WorkerNodeService.ps1" Link="Start-WorkerNodeService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\Stop-WorkerNodeService.ps1" Link="Stop-WorkerNodeService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\Uninstall-WorkerNodeService.ps1" Link="Uninstall-WorkerNodeService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\WorkerNodeFunctions.ps1" Link="WorkerNodeFunctions.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\WorkerNodeServiceName.ps1" Link="WorkerNodeServiceName.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\WorkerNodeService\WorkerNodeVersionInfo.ps1" Link="WorkerNodeVersionInfo.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <Content Include="..\..\..\DistributedProcessing\WorkerNodeService\appsettings.json" Link="appsettings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
