--- a/Samples/DistrProc/MessagingService/MessagingService.fsproj
+++ b/Samples/DistrProc/MessagingService/MessagingService.fsproj
@@ -20,15 +20,27 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\..\..\MessagingService\Install-MessagingService.ps1" Link="Install-MessagingService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\MessagingService\MessagingFunctions.ps1" Link="MessagingFunctions.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\MessagingService\Start-MessagingService.ps1" Link="Start-MessagingService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\MessagingService\Stop-MessagingService.ps1" Link="Stop-MessagingService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\MessagingService\Uninstall-MessagingService.ps1" Link="Uninstall-MessagingService.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <Content Include="..\..\..\DistributedProcessing\MessagingService\appsettings.json" Link="appsettings.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
-        <None Include="MessagingVersionInfo.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingVersionInfo.PS1')" />
         <None Include="MessagingServiceName.PS1" CopyToOutputDirectory="Always" Condition="Exists('MessagingServiceName.PS1')" />
         <Compile Include="Program.fs" />
     </ItemGroup>
-
-    <ItemGroup />
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
