--- a/Samples/DistrProc/MessagingService/MessagingService.fsproj
+++ b/Samples/DistrProc/MessagingService/MessagingService.fsproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <Platforms>x64</Platforms>
-        <AssemblyName>MessagingService</AssemblyName>
+        <AssemblyName>DistributedProcessingMessagingService</AssemblyName>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
@@ -20,6 +20,12 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <None Include="..\..\..\DistributedProcessing\MessagingService\MessagingServiceName.ps1" Link="MessagingServiceName.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="..\..\..\DistributedProcessing\MessagingService\MessagingVersionInfo.ps1" Link="MessagingVersionInfo.ps1">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Include="..\..\..\MessagingService\Install-MessagingService.ps1" Link="Install-MessagingService.ps1">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
@@ -45,12 +51,8 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.0" />
+      <ProjectReference Include="..\..\..\DistributedProcessing\MessagingService\MessagingService.fsproj" />
       <PackageReference Update="FSharp.Core" Version="8.0.400" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\..\MessagingService\MessagingService.fsproj" />
-      <ProjectReference Include="..\ServiceInfo\ServiceInfo.fsproj" />
     </ItemGroup>
 
 </Project>
